# ITP-Repo-UNO

Commit ohne Pics/: CMakeLists.txt  GamePage.qml  JoinPage.qml  Main.qml  StartMenu.qml  StartPage.qml  cardservice.cpp  cardservice.h  gameclient.cpp  gameclient.h  linkservice.cpp  linkservice.h  main.cpp  resources.qrc
Commit ohne Pics/ServerFiles/: UNOServer.pro  clientconnection.cpp  clientconnection.h  gamemanager.cpp  gamemanager.h  server.cpp  server.h
StartTest/: CMakeLists.txt  CMakeLists.txt.user.89a3a42  GamePage.qml  JoinPage.qml  Main.qml  StartPage.qml  cardservice.cpp  cardservice.h  gameclient.cpp  gameclient.h  linkservice.cpp  linkservice.h  main.cpp  resources.qrc
UNOServer/: UNOServer.pro  clientconnection.cpp  clientconnection.h  gamemanager.cpp  gamemanager.h  main.cpp  server.cpp  server.h
